examples/test/testpolicy11996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11996
  namespace: namespace235
spec:
  podSelector:
    matchLabels:
      key34: value41
      key36: value23
      key17: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value46
          key9: value3
      podSelector:
        matchLabels:
          key17: value45
